# morioka_eki

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: Cargo.toml
src/api/i18n/: messages.mo  messages.po
src/api/src/: crypto_util.rs  lib.rs  login.rs  utils.rs
src/api/src/logic/command/: check_token.rs  create_character.rs  login.rs  mod.rs
src/api/src/service/: check_token.rs  login.rs  mod.rs
src/api/src/util/: crypto_util.rs  http_util.rs  local_storage_util.rs  mod.rs
