[package]
name = "morioka-eki-api"
version = "0.1.0"
edition = "2021"
authors = ["haruka.moe"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24" ,features = ["json"]}
anyhow = "1.0.80"
gettext   = { version = "0.4.0"}
dotenv = "0.15.0"
aes = { version = "0.8.4"}
rand = "0.9.0-alpha.0"
rustyline = {version = "8.2.0"}